--- a/styles/nav.css
+++ b/styles/nav.css
@@ -111,6 +111,7 @@
 	font-family: "Avenir";
 	width: 100%;
 	border-top: #ECECEC 1px solid;
+	background-color: #e98989;
 	display: inline-block;
 	vertical-align: top;
 }
@@ -146,7 +147,7 @@
 }
 
 #contact a {
-	color: #e98989;
+	color: white;
 	text-decoration: none;
 }
 
@@ -154,8 +155,8 @@
 	vertical-align: bottom;
 	text-align: center;
 	margin-bottom: 10px;
-	color: #a6a6a6;
-	background-color: white;
+	color: white;
+	background-color: #e98989;
 	width: 100%;
 	font-size: 12px;
 }
