--- a/styles/projects.css
+++ b/styles/projects.css
@@ -64,11 +64,11 @@
 .pw_prompt {
     z-index: 5; /* Sit on top */
     position:fixed;
-    left: 40%;
-    top: 40%;
-    margin-left:-50px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding:50px;
-    width:350px;
+    width:400px;
     box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.15);
     background-color: white;
     font-family: Barlow Regular;
@@ -82,6 +82,16 @@
     margin-bottom:10px;
 }
 
+#cancel_button {
+    font-family: "Barlow Regular";
+    font-size: 1rem;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    display: inline;
+    cursor: pointer;
+    margin-left: 25px;
+}
+
 #modal_background {
   z-index: 1; /* Sit on top */
   position: fixed; /* Stay in place */
@@ -91,7 +101,12 @@
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(256,256,256,0.4); /* Black w/ opacity */
+  background-color: rgba(256,256,256,0.8); /* Black w/ opacity */
+}
+
+#error_message {
+    color: #da0000;
+    margin-top: 10px;
 }
 
 fieldset {
@@ -102,7 +117,16 @@ input {
     border: solid 2px var(--lightpink);
     height: 40px;
     width: 300px;
+    font-size: 24px;
 }
+
+input:focus {
+    border: solid 2px var(--green);
+    outline: var(--green);
+    font-size: 24px;
+    background-color: rgba(24, 178, 118, 0.05)
+}
+
 
 @media only screen and (max-width: 900px) {
 
