--- a/styles/global.css
+++ b/styles/global.css
@@ -139,21 +139,25 @@ button {
     color: black;
     border: none;
     background-color: white;
-    border: 2px solid black;
     margin-top: 20px;
 	font-family: "Barlow Extrabold";
 	font-size: 1rem;
 	letter-spacing: 3px;
 	text-transform: uppercase;
 
+	border: 1px solid #EFEFEF;
+	box-shadow: 0 0 10px 0 rgba(176,176,176,0.50);
+	border-radius: 10px;
+
   	transition: background-color 0.2s ease-in-out,
               	color 0.2s ease-in-out;
+
 }
 
 .secondary-btn {
     background-color: black;
     color: white;
-    border: 2px solid white;
+    border: 0px solid white;
 
   	transition: background-color 0.2s ease-in-out,
               	color 0.2s ease-in-out;
