--- a/styles/projects.css
+++ b/styles/projects.css
@@ -2,53 +2,49 @@
     font-weight: 100;
 }
 
-.section {
-    position: relative;
+#projects {
+    display: inline-block;
+}
+
+.section-large {
     width: 100%;
-    height: 30vw;
-    border-radius: 10px;
-    margin-bottom: 7vh;
+    height: auto;
+    border-radius: 15px;
+    margin-bottom: 4%;
+    box-shadow: 1px 1px 15px #e5e5e5;
+    display: flex;
 }
 
-.project-pic {
+.section {
     display: inline-block;
-    float: left;
-    width: 30vw;
-    height: 30vw;
-    margin-right: 1vw;
-    margin-bottom: 1vw;
-    border-radius: 50%;
+    width: 48%;
+    border-radius: 15px;
+    margin-bottom: 4%;
+    box-shadow: 1px 1px 15px #e5e5e5;
 }
 
-.project-info {
-    display: inline-block;
-    right: 0;
-    margin-left: 3vw;
-    width: 50vw;
+.project-pic-large {
+    width: 46%;
+    float: right;
+    margin-right: 4%;
+}
+
+.project-info-large {
+    width: 45%;
     position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    padding: 5%;
     transition: background-color 2s linear;
 }
 
-.project-caption {
-    width: 70%;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+.project-info {
+    width: 88%;
+    position: relative;
+    padding: 7%;
+    transition: background-color 2s linear;
 }
 
-.tag {
-    border: 1px solid lightgray;
-    border-radius: 10px;
-    height: 15px;
-    line-height: 20px;
-    padding: 10px;
-    margin-right: 5px;
-    margin-top: 5px;
-    display: inline-flex
+.project-pic {
+    width: 100%;
 }
 
 .subheader-2 {
@@ -134,6 +130,14 @@
         top: 0%;
         margin-left: 0;
         transform: translateY(0%);
+    }
+    
+    .project-pic-large {
+        width: 100%;
+    }
+
+    .project-info-large {
+        width: 100%;
     }
 
 }
