--- a/styles/global-mobile.css
+++ b/styles/global-mobile.css
@@ -1,3 +1,10 @@
+@media only screen and (max-width: 1300px) {
+    .big-pic {
+        opacity: 0.15 !important;
+    }
+}
+
+
 @media only screen and (max-width: 770px) {
 
     body {
