--- a/styles/global.css
+++ b/styles/global.css
@@ -177,10 +177,12 @@ button {
 
 .secondary-btn:hover {
 	background-color: rgba(0,0,0,0);
+	color: black;
 }
 
 button:hover {
 	background-color: rgba(0,0,0,0);
+	color: white;
 }
 
 button:focus {
