--- a/styles/global.css
+++ b/styles/global.css
@@ -251,6 +251,7 @@ h1 {
 h2 {
 	font-family: "Barlow ExtraBold";
 	font-size: 3rem;
+	line-height: 3rem;
 	padding-bottom: 5px;
 	margin-block-end: 0;
 	margin-block-start: 0;
