--- a/styles/global-mobile.css
+++ b/styles/global-mobile.css
@@ -14,16 +14,21 @@
     }
 
     h1 {
-        font-size: 4rem;
-        line-height: 4rem;
+        font-size: 3rem;
+        line-height: 3rem;
     }
 
     h2 {
-       font-size: 2.7rem; 
+       font-size: 2rem; 
+       line-height: 2.3rem;
     }
 
     h3 {
-       font-size: 1.3rem; 
+       font-size: 1.5rem; 
+    }
+
+    p {
+        font: 1rem;
     }
 
     header {
@@ -105,9 +110,10 @@
 	}
 
     .full-width {
-        display: inline-table;
+        display: block;
         height: auto;
-        width: 100%;
+        width: 100vw;
+        margin-right: 0px;
     }
     
     .big-pic {
