--- a/styles/global.css
+++ b/styles/global.css
@@ -156,7 +156,7 @@ button {
 	letter-spacing: 3px;
 	text-transform: uppercase;
 
-	border: 2px solid white;
+	border: 3px solid white;
 /*	box-shadow: 0 0 10px 0 rgba(176,176,176,0.50);*/
 	border-radius: 10px;
 
@@ -168,7 +168,7 @@ button {
 .secondary-btn {
     background-color: black;
     color: white;
-    border: 2px solid black;
+    border: 3px solid black;
 
   	transition: background-color 0.2s ease-in-out,
               	color 0.2s ease-in-out;
@@ -227,13 +227,13 @@ button:active {
     height: 40px;
     width: 40px;
     font-size: 40px;
-    text-align: center;
+    text-align: left;
     cursor: pointer;
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
-    margin: auto;
+    margin-left: 5%;
     margin-bottom: 60px;
     z-index: 5;
     color: white;
@@ -242,8 +242,8 @@ button:active {
 /* Text Styles */
 h1 {
 	font-family: "Barlow ExtraBold";
-	font-size: 5.3rem;
-	line-height: 5.3rem;
+	font-size: 4.8rem;
+	line-height: 4.8rem;
 	margin-block-end: 0;
 	margin-block-start: 0;
 }
@@ -251,7 +251,7 @@ h1 {
 h2 {
 	font-family: "Barlow ExtraBold";
 	font-size: 3rem;
-	line-height: 3rem;
+	line-height: 3.3rem;
 	padding-bottom: 5px;
 	margin-block-end: 0;
 	margin-block-start: 0;
@@ -259,7 +259,7 @@ h2 {
 
 h3 {
 	font-family: "Barlow Regular";
-	font-size: 1.4rem;
+	font-size: 1.8rem;
 	margin-block-end: 0;
 	margin-block-start: 0;
 	margin-top: 1vh;
@@ -268,7 +268,7 @@ h3 {
 
 h4 {
 	font-family: "Barlow Extrabold";
-	font-size: 1rem;
+	font-size: 1.1rem;
 	letter-spacing: 3px;
 	text-transform: uppercase;
 	margin-block-end: 0rem;
