--- a/styles/projects.css
+++ b/styles/projects.css
@@ -109,32 +109,39 @@
 @media only screen and (max-width: 900px) {
 
     .section {
-        margin: 5%;
-        padding: 3%;
-        width: 84%;
+        margin: 0;
+        margin-bottom: 5%;
+        width: 98%;
+        padding: 1%;
         float: none !important;
     }
 
     .section-large {
-        margin: 5%;
-        width: 84%;
+        margin: 0;
+        margin-bottom: 5%;
+        width: 98%;
+        padding: 1%;
         display: inline-block;
-        padding: 3%;
     }
 
     .project-info {
-        width: 84%;
+        width: 90%;
     }
 
     .project-info-large {
-        width: 84%;
+        width: 90%;
     }
 
     .project-pic-large {
+        display: none !important;
         width: 84vw;
         height: auto;
         display: block;
         float: none;
+    }
+
+    .project-pic {
+        display: none;
     }
 
 
