--- a/styles/nav.css
+++ b/styles/nav.css
@@ -133,7 +133,7 @@ header {
 }
 
 .contact-text {
-	width: 35%;
+	width: 39%;
 	text-align: left;
 	margin-left: 10%;
 	display: inline-block;
@@ -155,6 +155,7 @@ header {
 
 #contact a {
 	color: var(--purple);
+	font-size: 1.2rem;
 }
 
 #copyright {
