--- a/styles/global.css
+++ b/styles/global.css
@@ -103,7 +103,7 @@ ul {
 li {
 	list-style-type: circle;
 	font-family: "Barlow Regular";
-	font-size: 1.125rem;
+	font-size: 1.25rem;
 	margin-top: 1vh;
 }
 
@@ -263,7 +263,7 @@ h3 {
 	margin-block-end: 0;
 	margin-block-start: 0;
 	margin-top: 1vh;
-	margin-bottom: 3vh;
+	margin-bottom: 1vh;
 }
 
 h4 {
@@ -277,10 +277,10 @@ h4 {
 
 p {
 	font-family: "Barlow Regular";
-	font-size: 1.5rem;
-	line-height: 2rem;
+	font-size: 1.25rem;
+	line-height: 1.75rem;
 	margin-top: .5rem;
-	margin-bottom: 1.2rem;
+	margin-bottom: .5rem;
 }
 
 .space {
